# personal-budget-manager

./: .gitignore  ABOUT.md  DECISIONS.md  README.md  STATUS.md  TODO.md  claude_code_GUI_prompt.md  claude_code_budget_prompt.md  main.py  pyproject.toml  requirements.txt  test_statements.py
.claude/: HANDOFF.md
budget_app/: __init__.py
budget_app/controllers/: __init__.py
budget_app/models/: __init__.py  account.py  credit_card.py  database.py  deferred_interest.py  loan.py  paycheck.py  plaid_link.py  recurring_charge.py  shared_expense.py  transaction.py
budget_app/utils/: __init__.py  backup.py  calculations.py  csv_export.py  excel_import.py  logging_config.py  payoff_calculator.py  plaid_client.py  plaid_config.py  plaid_link_server.py  statement_parser.py
budget_app/views/: __init__.py  bank_api_view.py  credit_cards_view.py  dashboard_view.py  deferred_interest_view.py  main_window.py  paycheck_view.py  payoff_planner_view.py  pdf_import_view.py  posted_transactions_view.py  recurring_charges_view.py  shared_expenses_view.py  transactions_view.py  widgets.py
tests/: __init__.py  conftest.py  test_backup.py  test_calculations.py  test_calculations_extended.py  test_credit_cards_view.py  test_csv_export.py  test_dashboard_view.py  test_deferred_interest.py  test_deferred_interest_view.py  test_excel_import.py  test_loan_model.py  test_logging_config.py  test_main_window.py  test_models.py  test_paycheck_view.py  test_payoff_calculator.py  test_payoff_planner_view.py  test_pdf_import_view.py  test_placeholder_views.py  test_plaid_integration.py  test_posted_view.py  test_recurring_charge_extended.py  test_recurring_charges_view.py  test_shared_expense.py  test_shared_expenses_view.py  test_statement_parser.py  test_transactions_view_ui.py  test_widgets.py
